--- a/docs/_includes/pairwise.html
+++ b/docs/_includes/pairwise.html
@@ -6,14 +6,14 @@
 </div>
 <div>
   <a id="left_link_{{page.round}}" href="#" onclick="storeAndNext('left')">
-    <div class="block">
-      <div id="left_img_{{page.round}}" class="img right"></div>
+    <div class="block sameheight">
+      <div id="left_img_{{page.round}}" class="sameheight img right"></div>
       <!--<label id="left_title_{{page.round}}">Empty</label>-->
     </div>
   </a>
   <a id="right_link_{{page.round}}" href="#" onclick="storeAndNext('right')">
-    <div class="block">
-      <div id="right_img_{{page.round}}" class="img left"></div>
+    <div class="block ">
+      <div id="right_img_{{page.round}}" class="sameheight img left"></div>
       <!--<label id="right_title_{{page.round}}">Empty</label>-->
     </div>
   </a>  
