--- a/docs/style/style.css
+++ b/docs/style/style.css
@@ -42,7 +42,7 @@ button, .submit {
 }
 
 .skip {
-  margin-top: 0px !important;
+  margin: 0px !important;
   margin-left: 40% !important;
 }
 
@@ -79,11 +79,16 @@ img {
   align-self: center;
 }
 
+.sameheight{
+  align-items: stretch; 
+  display: flex;
+}
+
 .img {
   background: white;
   background-image: url("");
   background-repeat: no-repeat;
-  width: 80%;
+  width: 100%;
   height: 100%;
   padding: 5%;
   background-position: center;
@@ -102,7 +107,7 @@ img {
   box-shadow: 0 3px 0 0 rgba(0, 0, 0, .03), 0 0 0 2px rgba(0, 0, 0, .03);
   float: left;
   padding-bottom: 20px;
-  text-align: center;
+  text-align: left;
   font-size: x-large;
   color: black !important;
 }
