--- a/docs/_includes/pairwise.html
+++ b/docs/_includes/pairwise.html
@@ -20,7 +20,9 @@
 </div>
 <div>
   <button class="submit restart" type="button" onclick="previousPage()">Restart</button>
-  <div id="slider_{{page.round}}"></div>
 </div>
 
 <input type="hidden" id="answers_{{page.round}}" name="answers_{{page.round}}" value="">
+<div id="bottombar">
+  <div id="slider_{{page.round}}"></div>
+</div>
