--- a/docs/_includes/form.html
+++ b/docs/_includes/form.html
@@ -36,10 +36,10 @@
 
 
          {% elsif item.input_type == 'back' %}
-         <button class="inline submit" type="button" onclick="previousPage()" >{{ item.placeholder }}</button>
+         <button id="{{item.name}}" class="inline submit" type="button" onclick="previousPage()" >{{ item.placeholder }}</button>
 
          {% elsif item.input_type == 'continue' %}
-         <button class="inline submit" type="button" onclick="validator()" >{{ item.placeholder }}</button>
+         <button id="{{item.name}}" class="inline submit" type="button" onclick="validator()" >{{ item.placeholder }}</button>
 
          
          {% else %}
