--- a/docs/_includes/pairwise.html
+++ b/docs/_includes/pairwise.html
@@ -24,5 +24,5 @@
 
 <input type="hidden" id="answers_{{page.round}}" name="answers_{{page.round}}" value="">
 <div id="bottombar">
-  <div id="slider_{{page.round}}"></div>
+  <div id="slider_{{page.round}}" class="slider"></div>
 </div>
